--- a/ContohDemo/src/main/resources/application.properties
+++ b/ContohDemo/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8090
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://10.183.24.184:3307/DemoSpring
-spring.datasource.username = server
+spring.datasource.url = jdbc:mysql://localhost:3307/DemoSpring
+spring.datasource.username = root
 spring.datasource.password = 
 
 # Keep the connection alive if idle for a long time (needed in production)
